# MCP-blender-video-editor

./: .gitignore  LICENSE  README.md  addon.py  pyproject.toml  style-guide.md
docs/: whoami.md
src/blender_mcp/: __init__.py  server.py
src/sdk/: __init__.py
src/sdk/core/: __init__.py  frame.py  state.py  workspace.py
src/sdk/core/slides/: __init__.py  animations.py  collection.py  slide.py  styles.py  templates.py
src/sdk/intake/: __init__.py  audio.py  blender.py  video.py
src/sdk/tests/: test_audio.py  test_audio_search.py  test_auth.py  test_frame.py  test_images.py  test_openverse.py  test_slides.py  test_state.py  test_workspace.py
src/sdk/webscraping/: __init__.py  audio.py  auth.py  images.py  openverse.py  video.py
