[project]
name = "video-draft-mcp"
version = "0.1.0"
description = "Video drafting and scaffolding tool through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "pydantic>=2.0",
    "faster-whisper>=1.0.0",
    "requests>=2.28.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
video = ["yt-dlp>=2024.0.0"]

[project.scripts]
video-draft-mcp = "blender_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/sdk/tests"]

[project.urls]
"Homepage" = "https://github.com/yourusername/video-draft-mcp"
"Bug Tracker" = "https://github.com/yourusername/video-draft-mcp/issues"
